Adicionada sessão Sobre;

--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
                 <hr class="inicio-carrossel-linha">
             </div>
         </section>
-        <section class="sobre"></section>
+        <section class="sobre">
+            <div class="sobre-foto"><img src="/assets/img/christina-wocintechchat-com-Zpzf7TLj_gA-unsplash.jpg" alt="Foto de perfil"></div>
+            <div class="sobre-texto">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam porta scelerisque ipsum, vel suscipit velit pretium id. Etiam interdum nisl elit, a pretium nunc malesuada ut.</p>
+                <p>Proin mattis enim et mauris vehicula, sit amet fringilla ex tincidunt. Fusce vitae augue volutpat, consequat odio in, accumsan lectus.</p>
+            </div>
+        </section>
         <section class="missao"></section>
         <section class="projetos"></section>
         <section class="contato"></section>
