Ajustes em estilos; Adicionadas sessões: 	Missão; 	Projetos; Correções em responsividade;

--- a/index.html
+++ b/index.html
@@ -35,14 +35,42 @@
             </div>
         </section>
         <section class="sobre">
+            <div class="sobre-titulo">
+                <h1>Islana Costa</h1>
+            </div>
             <div class="sobre-foto"><img src="/assets/img/christina-wocintechchat-com-Zpzf7TLj_gA-unsplash.jpg" alt="Foto de perfil"></div>
             <div class="sobre-texto">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam porta scelerisque ipsum, vel suscipit velit pretium id. Etiam interdum nisl elit, a pretium nunc malesuada ut.</p>
                 <p>Proin mattis enim et mauris vehicula, sit amet fringilla ex tincidunt. Fusce vitae augue volutpat, consequat odio in, accumsan lectus.</p>
             </div>
         </section>
-        <section class="missao"></section>
-        <section class="projetos"></section>
+        <section class="missao">
+            <div class="missao-titulo">
+                <h1>Nossa missão</h1>
+            </div>
+            <div class="missao-texto">
+                <strong>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mattis enim et mauris vehicula,
+					sit amet fringilla ex tincidunt."</strong>
+            </div>
+        </section>
+        <section class="projetos">
+            <div class="projetos-titulo">
+                <h1>Projetos</h1>
+            </div>
+            <div class="projetos-estilo1">
+                <div class="projetos-estilo1-titulo">
+                    <h1 class="projeto-titulo-principal">Sala Moderna</h1>
+                    <strong class="projeto-titulo-secundario">Joquei Club</strong>
+                </div>
+                <div class="projetos-estilo1-imagens">
+                    <img class="destaque" src="/assets/img/alberto-castillo-q-mx4mSkK9zeo-unsplash.jpg" alt="">
+                    <img src="/assets/img/armin-djuhic-mcL2f-J74GY-unsplash.jpg" alt="">
+                    <img src="/assets/img/deborah-cortelazzi-gREquCUXQLI-unsplash.jpg" alt="">
+                    <img src="/assets/img/jarek-ceborski-jn7uVeCdf6U-unsplash.jpg" alt="">
+                    <img src="/assets/img/nastuh-abootalebi-JdcJn85xD2k-unsplash.jpg" alt="">
+                </div>
+            </div>
+        </section>
         <section class="contato"></section>
     </main>
     <footer>
