Adicionado menu interativo;

--- a/index.html
+++ b/index.html
@@ -21,10 +21,32 @@
         <div class="header-logo">
             <p>IC</p>
         </div>
-        <div class="header-menu"> <i class="fas fa-bars"></i> </div>
+        <div class="header-menu">
+            <label for="menu-checkbox" id="menu-icon"><i class="fas fa-bars"></i></label>
+            <input type="checkbox" name="" value="" id="menu-checkbox" class="menu-checkbox">
+            <div class="header-menu-list">
+                <nav>
+                    <a href="#inicio">
+                        <div class="header-menu-list-item">Início</div>
+                    </a>
+                    <a href="#sobre">
+                        <div class="header-menu-list-item">Sobre</div>
+                    </a>
+                    <a href="#missao">
+                        <div class="header-menu-list-item">Missão</div>
+                    </a>
+                    <a href="#projetos">
+                        <div class="header-menu-list-item">Projetos</div>
+                    </a>
+                    <a href="#contato">
+                        <div class="header-menu-list-item">Contato</div>
+                    </a>
+                </nav>
+            </div>
+        </div>
     </header>
     <main>
-        <section class="inicio">
+        <section class="inicio" id="inicio">
             <div class="inicio-logo">
                 <p>I s l a n a &nbsp; C o s t a</p>
                 <p>I N T E R I O R E S</p>
@@ -34,7 +56,7 @@
                 <hr class="inicio-carrossel-linha">
             </div>
         </section>
-        <section class="sobre">
+        <section class="sobre" id="sobre">
             <div class="sobre-titulo">
                 <h1>Islana Costa</h1>
             </div>
@@ -44,7 +66,7 @@
                 <p>Proin mattis enim et mauris vehicula, sit amet fringilla ex tincidunt. Fusce vitae augue volutpat, consequat odio in, accumsan lectus.</p>
             </div>
         </section>
-        <section class="missao">
+        <section class="missao" id="missao">
             <div class="missao-titulo">
                 <h1>Nossa missão</h1>
             </div>
@@ -53,7 +75,7 @@
 					sit amet fringilla ex tincidunt."</strong>
             </div>
         </section>
-        <section class="projetos">
+        <section class="projetos" id="projetos">
             <div class="projetos-titulo">
                 <h1>Projetos</h1>
             </div>
@@ -71,7 +93,7 @@
                 </div>
             </div>
         </section>
-        <section class="contato"></section>
+        <section class="contato" id="contato"></section>
     </main>
     <footer>
 
