Correções nos estilos do menu;

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p>IC</p>
         </div>
         <div class="header-menu">
-            <label for="menu-checkbox" id="menu-icon"><i class="fas fa-bars"></i></label>
+            <label for="menu-checkbox" id="menu-icon" class="menu-icon"><i class="fas fa-bars"></i></label>
             <input type="checkbox" name="" value="" id="menu-checkbox" class="menu-checkbox">
             <div class="header-menu-list">
                 <nav>
@@ -72,7 +72,7 @@
             </div>
             <div class="missao-texto">
                 <strong>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mattis enim et mauris vehicula,
-					sit amet fringilla ex tincidunt."</strong>
+                    sit amet fringilla ex tincidunt."</strong>
             </div>
         </section>
         <section class="projetos" id="projetos">
