Adicionada sessão contato e footer;

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a href="#sobre">
                         <div class="header-menu-list-item">Sobre</div>
                     </a>
-                    <a href="#missao">
+                    <a href="#missao" onclick="">
                         <div class="header-menu-list-item">Missão</div>
                     </a>
                     <a href="#projetos">
@@ -93,10 +93,25 @@
                 </div>
             </div>
         </section>
-        <section class="contato" id="contato"></section>
+        <section class="contato" id="contato">
+            <div class="contato-video">
+                Um video aqui
+            </div>
+            <div class="contato-texto">
+                <h3>Nossos projetos inspiraram você?</h3>
+                <h2>Deseja começar um projeto conosco?</h2>
+                <h1>Entre em contato</h1>
+                <strong> (99) 99999-9999 </strong>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <div class="redes-sociais">
+            <div class="facebook"> <i class="fab fa-facebook-square"></i> </div>
+            <div class="instagram"> <i class="fab fa-instagram-square"></i> </div>
+            <div class="pinterest"> <i class="fab fa-pinterest-square"></i> </div>
+            <div class="email"> <i class="fas fa-envelope"></i> </div>
+        </div>
     </footer>
 </body>
 
