Corrigido bug no menu;

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="header-menu">
             <label for="menu-checkbox" id="menu-icon" class="menu-icon"><i class="fas fa-bars"></i></label>
             <input type="checkbox" name="" value="" id="menu-checkbox" class="menu-checkbox">
-            <div class="header-menu-list">
+            <div class="header-menu-list" id="menu-list">
                 <nav>
                     <a href="#inicio">
                         <div class="header-menu-list-item">Início</div>
@@ -114,5 +114,6 @@
         </div>
     </footer>
 </body>
+<script src="/assets/js/main.js"></script>
 
 </html>
