Conjunto de imagens trocada por versão otimizada; Adicionado carrossel; Correções no menu;

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="/assets/css/normalize.css">
     <link rel="stylesheet" href="/assets/css/all.css">
     <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick-theme.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;800&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Mr+De+Haviland&display=swap">
 
@@ -51,16 +53,17 @@
                 <p>I s l a n a &nbsp; C o s t a</p>
                 <p>I N T E R I O R E S</p>
             </div>
-            <div class="inicio-carrossel">
-                <img src="/assets/img/alberto-castillo-q-mx4mSkK9zeo-unsplash.jpg" alt="Carrossel de imagens">
-                <hr class="inicio-carrossel-linha">
+            <div class="inicio-carrossel" id="carrossel">
+                <img src="/assets/img/toa-heftiba-FV3GConVSss-unsplash.png" alt="Carrossel de imagens">
+                <img src="/assets/img/rune-enstad-UXFJ-6Zj27M-unsplash.png" alt="Carrossel de imagens">
+                <img src="/assets/img/roberto-nickson-tleCJiDOri0-unsplash.png" alt="Carrossel de imagens">
             </div>
         </section>
         <section class="sobre" id="sobre">
             <div class="sobre-titulo">
                 <h1>Islana Costa</h1>
             </div>
-            <div class="sobre-foto"><img src="/assets/img/christina-wocintechchat-com-Zpzf7TLj_gA-unsplash.jpg" alt="Foto de perfil"></div>
+            <div class="sobre-foto"><img src="/assets/img/christina-wocintechchat-com-Zpzf7TLj_gA-unsplash.png" alt="Foto de perfil"></div>
             <div class="sobre-texto">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam porta scelerisque ipsum, vel suscipit velit pretium id. Etiam interdum nisl elit, a pretium nunc malesuada ut.</p>
                 <p>Proin mattis enim et mauris vehicula, sit amet fringilla ex tincidunt. Fusce vitae augue volutpat, consequat odio in, accumsan lectus.</p>
@@ -85,11 +88,11 @@
                     <strong class="projeto-titulo-secundario">Joquei Club</strong>
                 </div>
                 <div class="projetos-estilo1-imagens">
-                    <img class="destaque" src="/assets/img/alberto-castillo-q-mx4mSkK9zeo-unsplash.jpg" alt="">
-                    <img src="/assets/img/armin-djuhic-mcL2f-J74GY-unsplash.jpg" alt="">
-                    <img src="/assets/img/deborah-cortelazzi-gREquCUXQLI-unsplash.jpg" alt="">
-                    <img src="/assets/img/jarek-ceborski-jn7uVeCdf6U-unsplash.jpg" alt="">
-                    <img src="/assets/img/nastuh-abootalebi-JdcJn85xD2k-unsplash.jpg" alt="">
+                    <img class="destaque" src="/assets/img/alberto-castillo-q-mx4mSkK9zeo-unsplash.png" alt="">
+                    <img src="/assets/img/armin-djuhic-mcL2f-J74GY-unsplash.png" alt="">
+                    <img src="/assets/img/deborah-cortelazzi-gREquCUXQLI-unsplash.png" alt="">
+                    <img src="/assets/img/jarek-ceborski-jn7uVeCdf6U-unsplash.png" alt="">
+                    <img src="/assets/img/nastuh-abootalebi-JdcJn85xD2k-unsplash.png" alt="">
                 </div>
             </div>
         </section>
@@ -114,6 +117,9 @@
         </div>
     </footer>
 </body>
+<script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick.js"></script>
 <script src="/assets/js/main.js"></script>
 
 </html>
