Correções de bugs na versão mobile; Retirado carrossel para mobile;

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="/assets/css/normalize.css">
     <link rel="stylesheet" href="/assets/css/all.css">
     <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick-theme.css">
+    <link rel="stylesheet" href="/assets/slick/slick.css">
+    <link rel="stylesheet" href="/assets/slick/slick-theme.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;800&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Mr+De+Haviland&display=swap">
 
@@ -20,9 +20,18 @@
 
 <body>
     <header>
-        <div class="header-logo">
-            <p>IC</p>
-        </div>
+        <a href="#inicio">
+            <div class="header-destaque">
+                <div class="header-logo">
+                    <p>
+                        IC
+                    </p>
+                </div>
+                <h1 class="header-titulo">
+                    Islana Costa
+                </h1>
+            </div>
+        </a>
         <div class="header-menu">
             <label for="menu-checkbox" id="menu-icon" class="menu-icon"><i class="fas fa-bars"></i></label>
             <input type="checkbox" name="" value="" id="menu-checkbox" class="menu-checkbox">
@@ -57,6 +66,9 @@
                 <img src="/assets/img/toa-heftiba-FV3GConVSss-unsplash.png" alt="Carrossel de imagens">
                 <img src="/assets/img/rune-enstad-UXFJ-6Zj27M-unsplash.png" alt="Carrossel de imagens">
                 <img src="/assets/img/roberto-nickson-tleCJiDOri0-unsplash.png" alt="Carrossel de imagens">
+            </div>
+            <div class="inicio-mobile">
+                <img src="/assets/img/toa-heftiba-FV3GConVSss-unsplash.png" alt="Carrossel de imagens">
             </div>
         </section>
         <section class="sobre" id="sobre">
@@ -119,7 +131,7 @@
 </body>
 <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick.js"></script>
+<script src="/assets/slick/slick.js"></script>
 <script src="/assets/js/main.js"></script>
 
 </html>
