Padronização dos estilos; Substituido texto pela imagem da logo;

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
         <a href="#inicio">
             <div class="header-destaque">
                 <div class="header-logo">
-                    <p>
-                        IC
-                    </p>
+                    <!-- <p>IC</p> -->
+                    <img src="/assets/img/IC-logo-icone.png" alt="Logo">
                 </div>
                 <h1 class="header-titulo">
                     Islana Costa
@@ -94,7 +93,7 @@
             <div class="projetos-titulo">
                 <h1>Projetos</h1>
             </div>
-            <div class="projetos-estilo1">
+            <div class="projetos-estilo1 projetos-estilos">
                 <div class="projetos-estilo1-titulo">
                     <h1 class="projeto-titulo-principal">Sala Moderna</h1>
                     <strong class="projeto-titulo-secundario">Joquei Club</strong>
