Responsividade total para tablet; Ajustes no estilo; Limpeza no código;

--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
     </main>
     <footer>
         <div class="redes-sociais">
-            <div class="facebook"> <i class="fab fa-facebook-square"></i> </div>
-            <div class="instagram"> <i class="fab fa-instagram-square"></i> </div>
-            <div class="pinterest"> <i class="fab fa-pinterest-square"></i> </div>
-            <div class="email"> <i class="fas fa-envelope"></i> </div>
+            <div class="rede-social facebook"> <i class="fab fa-facebook-square"></i> </div>
+            <div class="rede-social instagram"> <i class="fab fa-instagram-square"></i> </div>
+            <div class="rede-social pinterest"> <i class="fab fa-pinterest-square"></i> </div>
+            <div class="rede-social email"> <i class="fas fa-envelope"></i> </div>
         </div>
     </footer>
 </body>
