Corrigidas inconsistências de classes; Ajustes no estilo do projeto; Responsividade completa para múltiplos dispositivos;

--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
             <div class="projetos-titulo">
                 <h1>Projetos</h1>
             </div>
-            <div class="projetos-estilo1 projetos-estilos">
-                <div class="projetos-estilo1-titulo">
+            <div class="projetos-estilos">
+                <div class="projetos-estilos-titulos">
                     <h1 class="projeto-titulo-principal">Sala Moderna</h1>
                     <strong class="projeto-titulo-secundario">Joquei Club</strong>
                 </div>
-                <div class="projetos-estilo1-imagens">
+                <div class="projetos-estilos-imagens">
                     <img class="destaque" src="/assets/img/alberto-castillo-q-mx4mSkK9zeo-unsplash.png" alt="">
-                    <img src="/assets/img/armin-djuhic-mcL2f-J74GY-unsplash.png" alt="">
+                    <img class="destaque-lateral" src="/assets/img/armin-djuhic-mcL2f-J74GY-unsplash.png" alt="">
                     <img src="/assets/img/deborah-cortelazzi-gREquCUXQLI-unsplash.png" alt="">
                     <img src="/assets/img/jarek-ceborski-jn7uVeCdf6U-unsplash.png" alt="">
                     <img src="/assets/img/nastuh-abootalebi-JdcJn85xD2k-unsplash.png" alt="">
@@ -105,7 +105,7 @@
         </section>
         <section class="contato" id="contato">
             <div class="contato-video">
-                Um video aqui
+                <iframe width="854" height="480" src="https://www.youtube.com/embed/Q8fMgVH6vwY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="contato-texto">
                 <h3>Nossos projetos inspiraram você?</h3>
@@ -117,10 +117,36 @@
     </main>
     <footer>
         <div class="redes-sociais">
-            <div class="rede-social facebook"> <i class="fab fa-facebook-square"></i> </div>
-            <div class="rede-social instagram"> <i class="fab fa-instagram-square"></i> </div>
-            <div class="rede-social pinterest"> <i class="fab fa-pinterest-square"></i> </div>
-            <div class="rede-social email"> <i class="fas fa-envelope"></i> </div>
+            <div class="rede-social telefone">
+                <a href="">
+                    <i class="fas fa-phone-alt"></i>
+                    <p> (99) 99999-9999 </p>
+                </a>
+            </div>
+            <div class="rede-social facebook">
+                <a href="">
+                    <i class="fab fa-facebook-square"></i>
+                    <p> islana-costa </p>
+                </a>
+            </div>
+            <div class="rede-social instagram">
+                <a href="">
+                    <i class="fab fa-instagram-square"></i>
+                    <p> @islana-costa </p>
+                </a>
+            </div>
+            <div class="rede-social pinterest">
+                <a href="">
+                    <i class="fab fa-pinterest-square"></i>
+                    <p> islanacosta </p>
+                </a>
+            </div>
+            <div class="rede-social email">
+                <a href="">
+                    <i class="fas fa-envelope"></i>
+                    <p> islanacosta@mail.com </p>
+                </a>
+            </div>
         </div>
     </footer>
 </body>
