Correções e limpezas no código;

--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
                 <h1>Nossa missão</h1>
             </div>
             <div class="missao-texto">
-                <strong>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mattis enim et mauris vehicula,
-                    sit amet fringilla ex tincidunt."</strong>
+                <strong>
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mattis enim et mauris vehicula,
+                    sit amet fringilla ex tincidunt."
+                </strong>
             </div>
         </section>
         <section class="projetos" id="projetos">
